# supynote

./: .gitignore  CLAUDE.md  README.md  alfred_sync.sh  pyproject.toml  sync_supernote.sh
.claude/: settings.local.json
examples/automation/: com.supynote.sync.plist.example  sync_from_server.sh
supynote/: cli.py  converter.py  device_finder.py  merger.py  pdf_merger.py  supernote.py
supynote/application/use_cases/: browse_device.py  download_use_case.py  get_device_info.py  legacy_adapter.py  list_files.py
supynote/infrastructure/network/: network_discovery_service.py
supynote/ocr/: native_service.py  pdf_processor.py
supynote/presentation/cli/: container.py  dispatcher.py
supynote/presentation/cli/commands/: commands.py  legacy_commands.py
supynote/services/: post_processing_service.py
